components/useCaseGenerics/overview.module.css
@import '/styles/global.css';

.outterContainer{
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: center;
    font-size: 1rem;
    font-family: SF Pro Text, sans-serif;
    margin-top: 10rem;
    width: var(--widest-container-width);
    gap: 4rem;
    justify-content: space-between;
}

.row1{
    display: flex;
    flex-direction: column;
    font-family: SF Pro Text, sans-serif;
    width: 30%;
}

.row2{
    display: flex;
    flex-direction: column;
    font-family: SF Pro Text, sans-serif;
    width: 60%;
}

.heading{
    color: var(--light-text, #D5DCF4);
    font-family: var(--font-fam-round, SF Pro Rounded, sans-serif);
    font-size: var(--body-text, 1.2rem);
    font-weight: 700;
    letter-spacing: 0.03rem;
    margin-top:0px;
}

.emphasis {
    color: var(--Light-blue, #D5DCF4);
    font-weight: 400;
    line-height: 150%; /* 2.25rem */
}

.body {
    color: var(--subheading-light-text, #A7B1CF);
    font-size: var(--body-text, 1.2rem);
    font-style: normal;
    font-weight: 400;
    line-height: 150%;

}

@media (max-width: 1030px) {
    .outterContainer{
        margin-top: 6.5rem;
        /* gap: 2rem 2rem; */
        gap: 2rem;
        
    }
    .row1{
        width: 100%;
    }
    .row2{
        width: 100%;
    }
}

@media (max-width: 714px) {
    .outterContainer{
        margin-top: 4rem;
        /* gap: 2rem 2rem; */
        flex-direction: column;
    }

}

